cabal-version:      2.4
name:               texas
version:            0.0.1.0
build-type:         Simple

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
-- author:      
-- maintainer:     

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

Library
    ghc-options:        -W -fdefer-typed-holes
    exposed-modules:    Texas.Driver.Entry, 
                        Texas.Driver.Render, 
                        Texas.Driver.GameWrapper, 
                        Texas.Backend.Interface
    other-modules:      Texas.Backend.Card,
                        Texas.Backend.Combination,
                        Texas.Backend.Game,
                        Texas.Backend.Player
    build-depends:      base, 
                        mtl,
                        brick <= 0.73,
                        containers,
                        microlens, 
                        microlens-th, 
                        random, 
                        random-shuffle, 
                        split, 
                        vty
    hs-source-dirs:     src
    default-language:   Haskell2010
    Default-Extensions: OverloadedStrings

executable client
    main-is:            Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:      Texas.Driver.Entry
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:      base,
                        mtl,
                        brick,
                        containers,
                        microlens, 
                        microlens-th, 
                        random, 
                        random-shuffle, 
                        split, 
                        vty,
                        texas
    hs-source-dirs:     src
    default-language:   Haskell2010
