cabal-version:      2.4
name:               texas
version:            0.0.1.0
build-type:         Simple

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
-- author:      
-- maintainer:     

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

Library
    ghc-options:        -W -fdefer-typed-holes
    exposed-modules:    Texas.Driver.Entry,
                        Texas.Backend.Interface,
                        Texas.Bot.Interface
    other-modules:      Texas.Backend.Card,
                        Texas.Backend.Combination,
                        Texas.Backend.Game,
                        Texas.Backend.Player,
                        Texas.Bot.RandomBot,
                        Texas.Bot.CallBot
    build-depends:      base,
                        random,
                        random-shuffle,
                        mtl
    hs-source-dirs:     src
    default-language:   Haskell2010
    Default-Extensions: OverloadedStrings

executable client
    main-is:            Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:      Texas.Driver.Entry

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:      base ^>=4.14.3.0,
                        texas
    hs-source-dirs:     src
    default-language:   Haskell2010
